# nightshade-api-template-leptos

./: Cargo.toml  README.md  index.html  justfile
.github/workflows/: pages.yml  rust.yml
desktop/: Cargo.toml
desktop/src/: main.rs
protocol/src/: lib.rs
public/: styles.css
src/: app.rs  bridge.rs  components.rs  lib.rs  main.rs  state.rs
src/components/: hud.rs  loader.rs  viewport.rs
worker/: Cargo.toml
worker/src/: lib.rs  state.rs  systems.rs
worker/src/systems/: example.rs  picking.rs  setup.rs
