[workspace]
members = ["desktop", "protocol", "worker"]
resolver = "2"

[package]
name = "template_api_leptos"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
protocol = { path = "protocol" }
nightshade-api = { version = "0.50.0", default-features = false, features = ["leptos"] }
serde_json = "1"
wasm-bindgen = "=0.2.115"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
    "Event",
    "EventTarget",
    "HtmlElement",
    "MouseEvent",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
