[package]
name = "worker"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
protocol = { path = "../protocol" }
nightshade-api = { version = "0.54.0", default-features = false, features = ["offscreen"] }
nightshade = { version = "0.54.0", features = ["tracing", "debug_render"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "=0.2.115"
